--- a/example.html
+++ b/example.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>barebox example</title>
@@ -33,6 +34,7 @@
         height: 100%;
         background: #000;
         opacity: 0.8;
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
         z-index: 1;
     }
     #whatever {
