--- a/example.html
+++ b/example.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>barebox example</title>
+    <link rel="stylesheet" href="example.css"></link>
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     <script src="jquery.barebox.js"></script>
     <script>
@@ -11,74 +12,20 @@
             e.preventDefault();
             return false;
         });
+        $('.show-inner').on('click', function(e) {
+            $('.tinycatte').barebox();
+            return false;
+        });
     });
     </script>
-    <style>
-    body {
-        background: #eee8d5;
-        color: #073642;
-        margin: 0;
-        font-family: Georgia;
-    }
-    body.noscroll {
-        overflow: hidden;
-    }
-    a {
-        color: #268bd2;
-    }
-
-    #barebox_overlay {
-        display: none;
-        position: fixed;
-        left: 0;
-        top: 0;
-        background: rgba(238,232,213,0.9);
-        z-index: 100;
-        width: 100%;
-        height: 100%;
-    }
-    #barebox_cell {
-        padding: 40px 0;
-    }
-    #whatever {
-        display: none;
-        width: 800px;
-        border: 2px solid #002b36;
-        background: #073642 url(http://placekitten.com/408/207) center no-repeat;
-        min-height: 400px;
-        height: 100%;
-    }
-    @media screen and (min-height: 550px) {
-        #whatever {
-            background-image: url(http://placekitten.com/500/400);
-        }
-    }
-    @media screen and (min-height: 750px) {
-        #whatever {
-            background-image: url(http://placekitten.com/700/700);
-        }
-    }
-    #test {
-        position: fixed;
-        bottom: 1em;
-        right: 1em;
-    }
-    h1 {
-        width: 640px;
-        font-size: 24px;
-        margin: 0 auto 1em;
-    }
-    p {
-        width: 640px;
-        line-height: 1.6em;
-        font-size: 16px;
-        margin: 1em auto;
-    }
-    </style>
 </head>
 <body>
     <a id="test" href="#">click me</a>
-    <div id="whatever"></div>
+    <div id="whatever">
+        <div class="tinycatte"></div>
+        <a class="show-inner" href="#">click for another one</a>
+    </div>
+
 <h1>Modal test</h1>
 <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
 
